plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
}

version = mod_version
group = mod_group_id

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

java {
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
}

sourceSets {
    gametest {
        java.srcDirs = ['src/gametest/java']
        resources.srcDirs = ['src/gametest/resources']
        compileClasspath += sourceSets.main.output
        runtimeClasspath += output + sourceSets.main.output
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
    testCompileOnly.extendsFrom compileOnly
    testRuntimeOnly.extendsFrom compileOnly
    gametestImplementation.extendsFrom implementation, api
    gametestCompileOnly.extendsFrom compileOnly
    gametestRuntimeOnly.extendsFrom runtimeOnly, localRuntime
}

apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/gradle/scripts/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/runs.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"
apply from: "$rootDir/gradle/scripts/idea.gradle"

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxParallelForks = 1
    forkEvery = 0
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar', Jar) {
    exclude('assets/mmcr_test/**')
    exclude('.cache/**')
    exclude('org/**')
    exclude('META-INF/services/**')
}
